--- a/templates/base.html
+++ b/templates/base.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Kismet Web Interface{% endblock %}</title>
     
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    
-    <!-- Feather Icons -->
-    <script src="https://unpkg.com/feather-icons"></script>
+    <!-- Bootstrap CSS (local for offline use) -->
+    <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+
+    <!-- Feather Icons (local for offline use) -->
+    <script src="{{ url_for('static', filename='js/feather.min.js') }}"></script>
     
     <!-- Custom CSS -->
     <link href="{{ url_for('static', filename='css/kismet.css') }}" rel="stylesheet">
@@ -125,8 +125,8 @@
         </div>
     </footer>
 
-    <!-- JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- JavaScript (local for offline use) -->
+    <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/device-detection.js') }}"></script>
     
     <script>
